# chinese-chess

./: README.md
OpenGL/: CMakeLists.txt  Callback.cpp  Callback.h  Camera.cpp  Camera.h  Chess.cpp  Chess.h  ChessBoard.cpp  ChessBoard.h  Defination.cpp  Defination.h  Definition.cpp  Definition.h  Header.h  Judge.cpp  Judge.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Object.cpp  Object.h  Path.cpp  Path.h  README.md  Shader.cpp  Shader.h  auxiliary.cpp  auxiliary.h  main.cpp
OpenGL/Models/2b/: 2b.mtl
OpenGL/Shaders/: lamp.frag  multilight.frag  spotlight.frag
android/ChineseChess/: gradlew.bat
android/ChineseChess/app/: build.gradle  proguard-rules.pro
android/ChineseChess/app/src/main/: AndroidManifest.xml
docs/: ~$软件设计文档.docx  ~$需求规格说明书.docx  安装部署说明.docx  小组分工与贡献率.docx  用户手册.docx  软件设计文档.docx  软件需求规格说明书.docx  项目申请表.doc
server/: .gitignore  Makefile  protocol.md
server/src/: chess.cpp  chess.h  client.cpp  client.h  json.hpp  main.cpp  server.cpp  server.h  simple-client.cpp  status.h  util.cpp  util.h
web/: README.md  index.html  package-lock.json  package.json
web/config/: index.js
web/src/: App.vue  main.js
web/src/components/: chessboard.vue  userHeader.vue
web/src/components/chenhch8/comm/: Form.vue  Header.vue  SmallTag.vue  Toast.vue
web/src/components/chenhch8/service/: utils.js
web/src/components/kungcn/: chess.vue
web/src/router/: index.js
web/src/store/: bottom-popup.js  dialog.js  index.js  popup.js  toast.js  user-info.js  user-portraits.js
web/src/views/: chess.vue
(+38 files in other folders)
